// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip controlled matches snapshot when isVisible is false 1`] = `
<div>
  <div
    data-testid="tooltip-target"
  >
    foo
  </div>
</div>
`;

exports[`Tooltip controlled matches snapshot when isVisible is true 1`] = `
<div>
  <div
    data-testid="tooltip-target"
  >
    foo
  </div>
  <span
    data-portal-entrance="guid-12345"
  />
</div>
`;
